When using bootstrap to put content into two columns, a small vertical scrollbar appears. This fixes the scrollbar by hiding the overflow.

--- a/scss/saylor/_general.scss
+++ b/scss/saylor/_general.scss
@@ -182,3 +182,7 @@ h6,
     padding: 0.5rem 0.25rem 0 0.75rem;
   };
 }
+
+.container-fluid {
+  overflow: hidden;
+}
